@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2013 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -161,7 +161,7 @@ public class JobListenerFactoryBeanTests {
 			@AfterJob
 			public void aMethod(JobExecution jobExecution) {
 				executed = true;
-				assertEquals(new Long(25), jobExecution.getId());
+				assertEquals(Long.valueOf(25L), jobExecution.getId());
 			}
 		};
 		factoryBean.setDelegate(delegate);
@@ -205,7 +205,7 @@ public class JobListenerFactoryBeanTests {
 			@SuppressWarnings("unused")
 			public void aMethod(JobExecution jobExecution) {
 				executed = true;
-				assertEquals(new Long(25), jobExecution.getId());
+				assertEquals(Long.valueOf(25L), jobExecution.getId());
 			}
 		};
 		factoryBean.setDelegate(delegate);
